tests/snapshots/regression-projection-bursts_boat_without_charges.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                    = Claymore
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 26.400000
ship/passiveShieldEffectiveRechargeRate      = 39.965986
ship/passiveShieldRechargeRate               = 13.988095
ship/ehp                                     = 32285.624081
ship/shieldThermalDamageEffectiveResonance   = 0.080000
ship/shieldKineticDamageEffectiveResonance   = 0.120000
ship/shieldExplosiveDamageEffectiveResonance = 0.100000
ship/shieldEmDamageEffectiveResonance        = 0.050000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.081250
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.025000
ship/shieldEhp                               = 16785.714000
ship/hullEhp                                 = 6343.283424
ship/armorEhp                                = 9156.626657
ship/shieldDamageEffectiveResonance          = 0.350000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.518750
ship/powerFree                               = 1155.000000
ship/cpuFree                                 = 546.250000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 95.555552
ship/capacitorPeakDelta                      = 17.916653
ship/capacitorPeakLoad                       = 0.833333
ship/capacitorPeakRecharge                   = 18.749987
ship/alignTime                               = 8.187801
ship/hp                                      = 4250.000000
ship/powerOutput                             = 1375.000000
ship/powerLoad                               = 220.000000
ship/maxVelocity                             = 212.500000
ship/cpuOutput                               = 656.250000
ship/cpuLoad                                 = 110.000000
ship/rechargeRate                            = 437500.312500
ship/agility                                 = 0.472500
ship/maxTargetRange                          = 93750.000000
ship/scanSpeed                               = 4125.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanLadarStrength                       = 26.400000
ship/shieldCapacity                          = 5875.000000
ship/armorHP                                 = 4750.000000
ship/shieldEmDamageResonance                 = 0.200000
ship/shieldExplosiveDamageResonance          = 0.400000
ship/shieldKineticDamageResonance            = 0.480000
ship/shieldThermalDamageResonance            = 0.320000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 1050000.000000
ship/capacitorCapacity                       = 3281.250000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/scanResolution                          = 330.000000
ship/shipBonusMBC1                           = -20.000000
ship/shipBonusMBC2                           = 37.500000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/eliteBonusCommandShips2                 = 50.000000
ship/eliteBonusCommandShips1                 = -25.000000
ship/eliteBonusCommandShips3                 = 15.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type              = Shield Command Burst II
high_1/state             = active
high_1/chargeAmount      = 3.000000
high_1/capacitorPeakLoad = 0.416667
high_1/cycleTime         = 60000.000000
high_1/maxRange          = 65812.500000
high_1/maxGroupActive    = 2.000000
high_1/maxGroupOnline    = 2.000000
high_1/reloadTime        = 30000.000000
high_1/warfareBuff1Value = 2.156250
high_1/warfareBuff2Value = 2.156250
high_1/warfareBuff3Value = 2.156250
high_1/buffDuration      = 103500.000000
high_1/warfareBuff4Value = 2.156250

high_2/type              = Skirmish Command Burst II
high_2/state             = active
high_2/chargeAmount      = 3.000000
high_2/capacitorPeakLoad = 0.416667
high_2/cycleTime         = 60000.000000
high_2/maxRange          = 65812.500000
high_2/maxGroupActive    = 2.000000
high_2/maxGroupOnline    = 2.000000
high_2/reloadTime        = 30000.000000
high_2/warfareBuff1Value = 2.156250
high_2/warfareBuff2Value = 2.156250
high_2/warfareBuff3Value = 2.156250
high_2/buffDuration      = 103500.000000
high_2/warfareBuff4Value = 2.156250
